small tweak
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>